# gcc-bazel-template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .yarnrc.yml  BUILD.bazel  README.md  WORKSPACE.bazel  bootstrap  bootstrap.sh  compile_commands.json  package.json  system.BUILD.bazel  unbox-bazel.config.js  unbox-bazel.config.json
.rh-project/: bootstrap.sh  build-all  build-all.sh  build-hello-another-world  build-hello-world  build-pre-bazel.sh  build-warp.sh  clean-all  clean-all.sh  conf.sh  generate-compdb  generate-compdb.sh  git-checkout-branches-from-gitmodules-file.sh  git-populate-submodules.sh  init.el  run-hello-another-world  run-hello-world.sh  run-warp.sh  test-warp.sh
