# cc_library(
#   name = "boost",
#   srcs = [
#     "libboost_thread.so",
#     "libboost_system.so",
#     "libboost_chrono.so",
#     "libboost_serialization.so",
#     "libboost_filesystem.so",
#     "libboost_regex.so",
#     "libboost_signals.so"
#   ],
#   visibility = ["//visibility:public"],
# )

cc_library(
  name = "system",
  srcs = [
    "librt.so",
    "libpthread.so",
    "libicuuc.so",
    "libicuio.so",
    # "libicuuc.a",
    # "libdl.so",
    # "libcrypt.so"
  ],
  visibility = ["//visibility:public"],
)
